# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: my-ci.yml
page_loader/: __init__.py  args_parser.py  downloader.py  errors.py  file_operations.py  helpers.py  network_operations.py
page_loader/scripts/: __init__.py  page_loader.py
tests/: test_downloader.py  test_file_operations.py  test_network_operations.py
tests/scripts/: test_page_loader.py
