[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "WEB page downloader"
authors = ["ikievite <ikievite@gmail.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
wemake-python-styleguide = "^0.15.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"
